--- a/sn-bibliography.bib
+++ b/sn-bibliography.bib
@@ -891,16 +891,6 @@
   publisher={Public Library of Science San Francisco, CA USA}
 }
 
-@article{cameron2013multifactorial,
-  title={A multifactorial interdisciplinary intervention reduces frailty in older people: randomized trial},
-  author={Cameron, Ian D and Fairhall, Nicola and Langron, Colleen and Lockwood, Keri and Monaghan, Noeline and Aggar, Christina and Sherrington, Catherine and Lord, Stephen R and Kurrle, Susan E},
-  journal={BMC medicine},
-  volume={11},
-  number={1},
-  pages={1--10},
-  year={2013},
-  publisher={BioMed Central}
-}
 
 @article{becker2020prevention,
   title={The prevention of musculoskeletal complaints: long-term effect of a work-related psychosocial coaching intervention compared to physiotherapy alone—a randomized controlled trial},
@@ -967,17 +957,6 @@
   publisher={Elsevier}
 }
 
-@article{gajdos2010effectiveness,
-  title={Effectiveness of chest physiotherapy in infants hospitalized with acute bronchiolitis: a multicenter, randomized, controlled trial},
-  author={Gajdos, Vincent and Katsahian, Sandrine and Beydon, Nicole and Abadie, Veronique and De Pontual, Lo{\"\i}c and Larrar, Sophie and Epaud, Ralph and Chevallier, Bertrand and Bailleux, Sylvain and Mollet-Boudjemline, Alix and others},
-  journal={PLoS medicine},
-  volume={7},
-  number={9},
-  pages={e1000345},
-  year={2010},
-  publisher={Public Library of Science San Francisco, USA}
-}
-
 @article{gallagher2014long,
   title={Long-term survival and dialysis dependency following acute kidney injury in intensive care: extended follow-up of a randomized controlled trial},
   author={Gallagher, Martin and Cass, Alan and Bellomo, Rinaldo and Finfer, Simon and Gattas, David and Lee, Joanne and Lo, Serigne and McGuinness, Shay and Myburgh, John and Parke, Rachael and others},
@@ -987,17 +966,6 @@
   pages={e1001601},
   year={2014},
   publisher={Public Library of Science San Francisco, USA}
-}
-
-@article{garnaes2016exercise,
-  title={Exercise training and weight gain in obese pregnant women: a randomized controlled trial (ETIP trial)},
-  author={Garn{\ae}s, Kirsti Krohn and M{\o}rkved, Siv and Salvesen, {\O}yvind and Moholdt, Trine},
-  journal={PLoS medicine},
-  volume={13},
-  number={7},
-  pages={e1002079},
-  year={2016},
-  publisher={Public Library of Science San Francisco, CA USA}
 }
 
 @article{gleason2015effects,
@@ -1011,17 +979,6 @@
   publisher={Public Library of Science San Francisco, CA USA}
 }
 
-@article{hardeman2020evaluation,
-  title={Evaluation of a very brief pedometer-based physical activity intervention delivered in NHS Health Checks in England: The VBI randomised controlled trial},
-  author={Hardeman, Wendy and Mitchell, Joanna and Pears, Sally and Van Emmenis, Miranda and Theil, Florence and Gc, Vijay S and Vasconcelos, Joana C and Westgate, Kate and Brage, S{\o}ren and Suhrcke, Marc and others},
-  journal={PLoS medicine},
-  volume={17},
-  number={3},
-  pages={e1003046},
-  year={2020},
-  publisher={Public Library of Science San Francisco, CA USA}
-}
-
 @article{harris2017effect,
   title={Effect of a Primary Care Walking Intervention with and without Nurse Support on Physical Activity Levels in 45-to 75-Year-Olds: The P edometer A nd C onsultation E valuation (PACE-UP) Cluster Randomised Clinical Trial},
   author={Harris, Tess and Kerry, Sally M and Limb, Elizabeth S and Victor, Christina R and Iliffe, Steve and Ussher, Michael and Whincup, Peter H and Ekelund, Ulf and Fox-Rushby, Julia and Furness, Cheryl and others},
@@ -1030,17 +987,6 @@
   number={1},
   pages={e1002210},
   year={2017},
-  publisher={Public Library of Science San Francisco, CA USA}
-}
-
-@article{hassett2020digitally,
-  title={Digitally enabled aged care and neurological rehabilitation to enhance outcomes with Activity and MObility UsiNg Technology (AMOUNT) in Australia: A randomised controlled trial},
-  author={Hassett, Leanne and van den Berg, Maayken and Lindley, Richard I and Crotty, Maria and McCluskey, Annie and van der Ploeg, Hidde P and Smith, Stuart T and Schurr, Karl and Howard, Kirsten and Hackett, Maree L and others},
-  journal={PLoS medicine},
-  volume={17},
-  number={2},
-  pages={e1003029},
-  year={2020},
   publisher={Public Library of Science San Francisco, CA USA}
 }
 
@@ -1162,6 +1108,82 @@
   publisher={Public Library of Science San Francisco, CA USA}
 }
 
+@article{hassett2020digitally,
+  title={Digitally enabled aged care and neurological rehabilitation to enhance outcomes with Activity and MObility UsiNg Technology (AMOUNT) in Australia: A randomised controlled trial},
+  author={Hassett, Leanne and van den Berg, Maayken and Lindley, Richard I and Crotty, Maria and McCluskey, Annie and van der Ploeg, Hidde P and Smith, Stuart T and Schurr, Karl and Howard, Kirsten and Hackett, Maree L and others},
+  journal={PLoS medicine},
+  volume={17},
+  number={2},
+  pages={e1003029},
+  year={2020},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{mills2019effect,
+  title={The effect of a lifestyle intervention in obese pregnant women on gestational metabolic profiles: findings from the UK Pregnancies Better Eating and Activity Trial (UPBEAT) randomised controlled trial},
+  author={Mills, Harriet L and Patel, Nashita and White, Sara L and Pasupathy, Dharmintra and Briley, Annette L and Santos Ferreira, Diana L and Seed, Paul T and Nelson, Scott M and Sattar, Naveed and Tilling, Kate and others},
+  journal={BMC medicine},
+  volume={17},
+  pages={1--12},
+  year={2019},
+  publisher={Springer}
+}
+
+@article{wyke2019effect,
+  title={The effect of a programme to improve men’s sedentary time and physical activity: The European Fans in Training (EuroFIT) randomised controlled trial},
+  author={Wyke, Sally and Bunn, Christopher and Andersen, Eivind and Silva, Marlene N and Van Nassau, Femke and McSkimming, Paula and Kolovos, Spyros and Gill, Jason MR and Gray, Cindy M and Hunt, Kate and others},
+  journal={PLoS medicine},
+  volume={16},
+  number={2},
+  pages={e1002736},
+  year={2019},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{thorndike2014activity,
+  title={Activity monitor intervention to promote physical activity of physicians-in-training: randomized controlled trial},
+  author={Thorndike, Anne N and Mills, Sarah and Sonnenberg, Lillian and Palakshappa, Deepak and Gao, Tian and Pau, Cindy T and Regan, Susan},
+  journal={PloS one},
+  volume={9},
+  number={6},
+  pages={e100251},
+  year={2014},
+  publisher={Public Library of Science San Francisco, USA}
+}
+
+@article{cameron2013multifactorial,
+  title={A multifactorial interdisciplinary intervention reduces frailty in older people: randomized trial},
+  author={Cameron, Ian D and Fairhall, Nicola and Langron, Colleen and Lockwood, Keri and Monaghan, Noeline and Aggar, Christina and Sherrington, Catherine and Lord, Stephen R and Kurrle, Susan E},
+  journal={BMC medicine},
+  volume={11},
+  number={1},
+  pages={1--10},
+  year={2013},
+  publisher={BioMed Central}
+}
+
+@article{taylor2016novel,
+  title={Novel three-day, community-based, nonpharmacological group intervention for chronic musculoskeletal pain (COPERS): a randomised clinical trial},
+  author={Taylor, Stephanie JC and Carnes, Dawn and Homer, Kate and Kahan, Brennan C and Hounsome, Natalia and Eldridge, Sandra and Spencer, Anne and Pincus, Tamar and Rahman, Anisur and Underwood, Martin},
+  journal={PLoS medicine},
+  volume={13},
+  number={6},
+  pages={e1002040},
+  year={2016},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{myer2018integration,
+  title={Integration of postpartum healthcare services for HIV-infected women and their infants in South Africa: a randomised controlled trial},
+  author={Myer, Landon and Phillips, Tamsin K and Zerbe, Allison and Brittain, Kirsty and Lesosky, Maia and Hsiao, Nei-Yuan and Remien, Robert H and Mellins, Claude A and McIntyre, James A and Abrams, Elaine J},
+  journal={PLoS medicine},
+  volume={15},
+  number={3},
+  pages={e1002547},
+  year={2018},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
 @article{lockman2012nevirapine,
   title={Nevirapine-versus lopinavir/ritonavir-based initial therapy for HIV-1 infection among women in Africa: a randomized trial},
   author={Lockman, Shahin and Hughes, Michael and Sawe, Fred and Zheng, Yu and McIntyre, James and Chipato, Tsungai and Asmelash, Aida and Rassool, Mohammed and Kimaiyo, Sylvester and Shaffer, Douglas and others},
@@ -1173,3 +1195,212 @@
   publisher={Public Library of Science San Francisco, USA}
 }
 
+
+@article{stuck2015effect,
+  title={Effect of health risk assessment and counselling on health behaviour and survival in older people: a pragmatic randomised trial},
+  author={Stuck, Andreas E and Moser, Andr{\'e} and Morf, Ueli and Wirz, Urban and Wyser, Joseph and Gillmann, Gerhard and Born, Stephan and Zwahlen, Marcel and Iliffe, Steve and Harari, Danielle and others},
+  journal={PLoS medicine},
+  volume={12},
+  number={10},
+  pages={e1001889},
+  year={2015},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{tanaka2020febuxostat,
+  title={Febuxostat does not delay progression of carotid atherosclerosis in patients with asymptomatic hyperuricemia: a randomized, controlled trial},
+  author={Tanaka, Atsushi and Taguchi, Isao and Teragawa, Hiroki and Ishizaka, Nobukazu and Kanzaki, Yumiko and Tomiyama, Hirofumi and Sata, Masataka and Sezai, Akira and Eguchi, Kazuo and Kato, Toru and others},
+  journal={PLoS medicine},
+  volume={17},
+  number={4},
+  pages={e1003095},
+  year={2020},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{oyama2016effect,
+  title={The effect of sitagliptin on carotid artery atherosclerosis in type 2 diabetes: the PROLOGUE randomized controlled trial},
+  author={Oyama, Jun-ichi and Murohara, Toyoaki and Kitakaze, Masafumi and Ishizu, Tomoko and Sato, Yasunori and Kitagawa, Kazuo and Kamiya, Haruo and Ajioka, Masayoshi and Ishihara, Masaharu and Dai, Kazuoki and others},
+  journal={Plos medicine},
+  volume={13},
+  number={6},
+  pages={e1002051},
+  year={2016},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{zhang2020impact,
+  title={Impact of providing free HIV self-testing kits on frequency of testing among men who have sex with men and their sexual partners in China: A randomized controlled trial},
+  author={Zhang, Ci and Koniak-Griffin, Deborah and Qian, Han-Zhu and Goldsamt, Lloyd A and Wang, Honghong and Brecht, Mary-Lynn and Li, Xianhong},
+  journal={PLoS medicine},
+  volume={17},
+  number={10},
+  pages={e1003365},
+  year={2020},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+
+@article{moholdt2012home,
+  title={Home-based aerobic interval training improves peak oxygen uptake equal to residential cardiac rehabilitation: a randomized, controlled trial},
+  author={Moholdt, Trine and Bekken Vold, Mona and Grimsmo, Jostein and Sl{\o}rdahl, Stig Arild and Wisl{\o}ff, Ulrik},
+  journal={PloS one},
+  volume={7},
+  number={7},
+  pages={e41199},
+  year={2012},
+  publisher={Public Library of Science San Francisco, USA}
+}
+
+
+@article{hardeman2020evaluation,
+  title={Evaluation of a very brief pedometer-based physical activity intervention delivered in NHS Health Checks in England: The VBI randomised controlled trial},
+  author={Hardeman, Wendy and Mitchell, Joanna and Pears, Sally and Van Emmenis, Miranda and Theil, Florence and Gc, Vijay S and Vasconcelos, Joana C and Westgate, Kate and Brage, S{\o}ren and Suhrcke, Marc and others},
+  journal={PLoS medicine},
+  volume={17},
+  number={3},
+  pages={e1003046},
+  year={2020},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{garnaes2016exercise,
+  title={Exercise training and weight gain in obese pregnant women: a randomized controlled trial (ETIP trial)},
+  author={Garn{\ae}s, Kirsti Krohn and M{\o}rkved, Siv and Salvesen, {\O}yvind and Moholdt, Trine},
+  journal={PLoS medicine},
+  volume={13},
+  number={7},
+  pages={e1002079},
+  year={2016},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{gajdos2010effectiveness,
+  title={Effectiveness of chest physiotherapy in infants hospitalized with acute bronchiolitis: a multicenter, randomized, controlled trial},
+  author={Gajdos, Vincent and Katsahian, Sandrine and Beydon, Nicole and Abadie, Veronique and De Pontual, Lo{\"\i}c and Larrar, Sophie and Epaud, Ralph and Chevallier, Bertrand and Bailleux, Sylvain and Mollet-Boudjemline, Alix and others},
+  journal={PLoS medicine},
+  volume={7},
+  number={9},
+  pages={e1000345},
+  year={2010},
+  publisher={Public Library of Science San Francisco, USA}
+}
+
+@article{menant2018reducing,
+  title={Reducing the burden of dizziness in middle-aged and older people: a multifactorial, tailored, single-blind randomized controlled trial},
+  author={Menant, Jasmine C and Migliaccio, Americo A and Sturnieks, Daina L and Hicks, Cameron and Lo, Joanne and Ratanapongleka, Mayna and Turner, Jessica and Delbaere, Kim and Titov, Nickolai and Meinrath, Daniela and others},
+  journal={PLoS Medicine},
+  volume={15},
+  number={7},
+  pages={e1002620},
+  year={2018},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{perlman2012massage,
+  title={Massage therapy for osteoarthritis of the knee: a randomized dose-finding trial},
+  author={Perlman, Adam I and Ali, Ather and Njike, Valentine Yanchou and Hom, David and Davidi, Anna and Gould-Fogerite, Susan and Milak, Carl and Katz, David L},
+  journal={PLoS One},
+  volume={7},
+  number={2},
+  pages={e30248},
+  year={2012},
+  publisher={Public Library of Science San Francisco, USA}
+}
+
+@article{pasha2013combined,
+  title={A combined community-and facility-based approach to improve pregnancy outcomes in low-resource settings: a Global Network cluster randomized trial},
+  author={Pasha, Omrana and McClure, Elizabeth M and Wright, Linda L and Saleem, Sarah and Goudar, Shivaprasad S and Chomba, Elwyn and Patel, Archana and Esamai, Fabian and Garces, Ana and Althabe, Fernando and others},
+  journal={BMC medicine},
+  volume={11},
+  number={1},
+  pages={1--12},
+  year={2013},
+  publisher={BioMed Central}
+}
+
+@article{friedli2020refeeding,
+  title={Refeeding syndrome is associated with increased mortality in malnourished medical inpatients: secondary analysis of a randomized trial},
+  author={Friedli, Natalie and Baumann, Jessica and Hummel, Ramona and Kloter, Milena and Odermatt, Jonas and Fehr, Rebecca and Felder, Susan and Baechli, Valerie and Geiser, Martina and Deiss, Manuela and others},
+  journal={Medicine},
+  volume={99},
+  number={1},
+  year={2020},
+  publisher={Wolters Kluwer Health}
+}
+
+@article{solomons2020intramuscular,
+  title={Intramuscular stimulation vs sham needling for the treatment of chronic midportion Achilles tendinopathy: a randomized controlled clinical trial},
+  author={Solomons, Lyndal and Lee, Jenny JY and Bruce, Margaret and White, Lynita D and Scott, Alex},
+  journal={PLoS One},
+  volume={15},
+  number={9},
+  pages={e0238579},
+  year={2020},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+
+@article{rossetti2020continuous,
+  title={Continuous vs routine electroencephalogram in critically ill adults with altered consciousness and no recent seizure: a multicenter randomized clinical trial},
+  author={Rossetti, Andrea O and Schindler, Kaspar and Sutter, Raoul and R{\"u}egg, Stephan and Zubler, Fr{\'e}d{\'e}ric and Novy, Jan and Oddo, Mauro and Warpelin-Decrausaz, Loane and Alvarez, Vincent},
+  journal={JAMA neurology},
+  volume={77},
+  number={10},
+  pages={1225--1232},
+  year={2020},
+  publisher={American Medical Association}
+}
+
+
+@article{roman2016effects,
+  title={Effects of an exercise programme on functional capacity, body composition and risk of falls in patients with cirrhosis: a randomized clinical trial},
+  author={Rom{\'a}n, Eva and Garc{\'\i}a-Galcer{\'a}n, Cristina and Torrades, Teresa and Herrera, Silvia and Mar{\'\i}n, Ana and Do{\~n}ate, Maite and Alvarado-Tapias, Edilmar and Malouf, Jorge and N{\'a}cher, Laura and Serra-Grima, Ricard and others},
+  journal={PLoS One},
+  volume={11},
+  number={3},
+  pages={e0151652},
+  year={2016},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+@article{rodrigo2019animal,
+  title={Animal-assisted intervention improves pain perception in polymedicated geriatric patients with chronic joint pain: A clinical trial},
+  author={Rodrigo-Claverol, Maylos and Casanova-Gonzalvo, Carles and Malla-Clua, Bel{\'e}n and Rodrigo-Claverol, Esther and Jov{\'e}-Naval, J{\'u}lia and Ortega-Bravo, Marta},
+  journal={International journal of environmental research and public health},
+  volume={16},
+  number={16},
+  pages={2843},
+  year={2019},
+  publisher={MDPI}
+}
+
+@article{raeissadat2020platelet,
+  title={Platelet-rich plasma-derived growth factor vs hyaluronic acid injection in the individuals with knee osteoarthritis: a one year randomized clinical trial},
+  author={Raeissadat, Seyed Ahmad and Gharooee Ahangar, Azadeh and Rayegani, Seyed Mansoor and Minator Sajjadi, Mohammadreza and Ebrahimpour, Adel and Yavari, Pegah},
+  journal={Journal of Pain Research},
+  pages={1699--1711},
+  year={2020},
+  publisher={Taylor \& Francis}
+}
+
+@article{tagalidou2019efficacy,
+  title={Efficacy and feasibility of a humor training for people suffering from depression, anxiety, and adjustment disorder: a randomized controlled trial},
+  author={Tagalidou, Nektaria and Distlberger, Eva and Loderer, Viola and Laireiter, Anton-Rupert},
+  journal={BMC psychiatry},
+  volume={19},
+  number={1},
+  pages={1--13},
+  year={2019},
+  publisher={BioMed Central}
+}
+
+@article{an2020patterns,
+  title={Patterns and predictors of exercise behavior during 24 months of follow-up after a supervised exercise program during breast cancer chemotherapy},
+  author={An, Ki-Yong and Kang, Dong-Woo and Morielli, Andria R and Friedenreich, Christine M and Reid, Robert D and McKenzie, Donald C and Gelmon, Karen and Mackey, John R and Courneya, Kerry S},
+  journal={International Journal of Behavioral Nutrition and Physical Activity},
+  volume={17},
+  number={1},
+  pages={1--11},
+  year={2020},
+  publisher={BioMed Central}
+}
