Complete - Corpus documents

--- a/sn-article.tex
+++ b/sn-article.tex
@@ -1080,98 +1080,96 @@ This information should be found in the methods section (statistical analysis) o
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 Table~\ref{tab1} lists down all the RCTs annotated in this work along with the outcome being assessed for bias risk.
-The corpus comprised 40 documents with XX subjective primary outcomes, XX objective outcomes and XX focusing no mortality outcomes.
+The corpus comprised 41 documents with 17 subjective outcomes, 17 objective outcomes and 7 focusing on mortality outcomes.
 
-\begin{longtable}{|p{3cm}|p{3.5cm}|p{3cm}|p{1.7cm}|}
+\begin{longtable}{|p{4.2cm}|p{5.2cm}|p{1.9cm}|}
 \caption{List of RCTs annotated in this project. Bold = The documents marked in bold were the ones used for the manual LLM evaluation. \underline{Underlined} = The documents marked with underline were the doubly-annotated RCTs used for inter-annotator agreement calculation.}\label{tab1}
 \hline
-\textbf{Name} & \textbf{Outcome} & \textbf{Outcome Type} & \textbf{Reference} \\
+\textbf{Name} & \textbf{Outcome} & \textbf{Type} \\
 \hline
 \endhead % This header will be repeated on each page
-
-% Generating 41 rows of dummy data
 \hline
-\textbf{Hassett 2020} & Upright time & Objective & \cite{hassett2020digitally} \\
+\textbf{Hassett 2020}~\cite{hassett2020digitally} & Upright time & Objective \\
 \hline
-Mills 2019 & Very Low Density Lipo Protein & Objective & \cite{mills2019effect} \\
+Mills 2019~\cite{mills2019effect} & Very low density lipo protein & Objective \\
 \hline
-\textbf{Wyke 2019} & Steps per day & Objective & \cite{wyke2019effect} \\
+\textbf{Wyke 2019}~\cite{wyke2019effect} & Steps per day & Objective \\
 \hline
-Cameron 2013 & Frailty & Objective & \cite{cameron2013multifactorial} \\
+Cameron 2013~\cite{cameron2013multifactorial} & Frailty & Objective \\
 \hline
-\textbf{Taylor 2016} & Chronic pain grade & Subjective & \cite{taylor2016novel} \\
+\textbf{Taylor 2016}~\cite{taylor2016novel} & Chronic pain grade & Subjective \\
 \hline
-\textbf{Stuck 2015} & All cause mortality & Mortality & \cite{stuck2015effect} \\
+\textbf{Stuck 2015}~\cite{stuck2015effect} & All cause mortality & Mortality \\
 \hline
-Gallagher 2014 & Mortality & Mortality & \cite{gallagher2014long} \\
+Gallagher 2014~\cite{gallagher2014long} & Mortality & Mortality \\
 \hline
-Tanaka 2020 & Carotid atherosclerosis & Objective & \cite{tanaka2020febuxostat} \\
+Tanaka 2020~\cite{tanaka2020febuxostat} & Carotid atherosclerosis & Objective \\
 \hline
-Oyama 2016 & Carotid Artery IMT 24 month & Objective & \cite{oyama2016effect} \\
+Oyama 2016~\cite{oyama2016effect} & Carotid Artery Intima-Media Thickness (IMT) 24 month & Objective \\
 \hline
-\textbf{Zhang 2020} & Frequency HIV testing & Objective & \cite{zhang2020impact} \\
+\textbf{Zhang 2020}~\cite{zhang2020impact} & Frequency HIV testing & Objective \\
 \hline
-Moholdt 2012 & Peak oxygen uptake & Objective & \cite{moholdt2012home} \\
+Moholdt 2012~\cite{moholdt2012home} & Peak oxygen uptake & Objective \\
 \hline
-Hardeman 2020 & Activity volume & Objective & \cite{hardeman2020evaluation} \\
+Hardeman 2020~\cite{hardeman2020evaluation} & Activity volume & Objective \\
 \hline
-Garnaes 2016 & Gestational diabetes mellitus & Objective & \cite{garnaes2016exercise} \\
+Garnaes 2016~\cite{garnaes2016exercise} & Gestational diabetes mellitus & Objective \\
 \hline
-Gajdos 2010 & 8 hour without oxygen & Objective & \cite{gajdos2010effectiveness} \\
+Gajdos 2010~\cite{gajdos2010effectiveness} & 8 hour without oxygen & Objective \\
 \hline
-Menant 2018 & Dizziness handicap inventory & Subjective & \cite{menant2018reducing} \\
+Menant 2018~\cite{menant2018reducing} & Dizziness handicap inventory & Subjective \\
 \hline
-Perlman 2012 & WOMAC total 8 weeks & Subjective & \cite{perlman2012massage} \\
+Perlman 2012~\cite{perlman2012massage} & WOMAC total 8 weeks & Subjective \\
 \hline
-Lawlor 2018 & ADAS Cog12 & Subjective & \cite{lawlor2018nilvadipine} \\
+Lawlor 2018~\cite{lawlor2018nilvadipine} & Alzheimer's Disease Assessment Scale-Cognitive Subscale 12 (ADAS Cog12) & Subjective \\
 \hline
-Barker 2019 & Falls per person year & Subjective & \cite{barker2019evaluation} \\
+Barker 2019~\cite{barker2019evaluation} & Falls per person year & Subjective \\
 \hline
-Bjerre 2019 & Quality of life & Subjective & \cite{bjerre2019community} \\
+Bjerre 2019~\cite{bjerre2019community} & Quality of life (QoL) & Subjective \\
 \hline
-\textbf{Myer 2018} & Infant mortality & Mortality & \cite{myer2018integration} \\
+\textbf{Myer 2018}~\cite{myer2018integration} & Infant mortality & Mortality \\
 \hline
-\textbf{Lockman 2012} & Death & Mortality & \cite{lockman2012nevirapine} \\
+\textbf{Lockman 2012}~\cite{lockman2012nevirapine} & Death & Mortality \\
 \hline
-\underline{Pasha 2013} & Mean perinatal mortality & Mortality & \cite{pasha2013combined} \\
+\underline{Pasha 2013}~\cite{pasha2013combined} & Mean perinatal mortality & Mortality \\
 \hline
-\underline{Darlow 2019} & Roland Morris Disability Questionnaire 6 Months & Subjective & \cite{darlow2019fear} \\
+\underline{Darlow 2019}~\cite{darlow2019fear} & Roland Morris Disability Questionnaire 6 Months & Subjective \\
 \hline
-\underline{Legro 2022} & Healthy live birth & Objective & \cite{legro2022effects} \\ %TODO: Isnt it mortality outcome?
+\underline{Legro 2022}\cite{legro2022effects} & Healthy live birth & Objective \\ %TODO: Isnt it mortality outcome?
 \hline
-\underline{Osteras 2019} & Patient reporting quality of care 6 months & Subjective & \cite{osteraas2019implementing} \\
+\underline{Osteras 2019}~\cite{osteraas2019implementing} & Patient reporting quality of care 6 months & Subjective \\
 \hline
-\underline{Friedli 2020} & Mortality within 120 days & Mortality & \cite{friedli2020refeeding} \\
+\underline{Friedli 2020}~\cite{friedli2020refeeding} & Mortality within 120 days & Mortality \\
 \hline
-\underline{Becker 2020} & Restriction muscle strength at 3rd Followup & Objective & \cite{becker2020prevention} \\
+\underline{Becker 2020}~\cite{becker2020prevention} & Restriction muscle strength at 3rd Followup & Objective \\
 \hline
-Solomons 2020 & VISA A & Subjective & \cite{solomons2020intramuscular} \\
+Solomons 2020~\cite{solomons2020intramuscular} & Victorian Institute of Sports Assessment - Achilles (VISA A) & Subjective \\
 \hline
-Rossetti 2020 & Risk Ratio Death 6 months & Mortality & \cite{rossetti2020continuous} \\
+Rossetti 2020~\cite{rossetti2020continuous} & Risk Ratio Death 6 months & Mortality \\
 \hline
-Roman 2016 & TUG & Objective & \cite{roman2016effects} \\
+Roman 2016~\cite{roman2016effects} & Timed Up and Go Test (TUG) & Objective \\
 \hline
-Raeissadat 2020 & VAS Pain 12month & Subjective & \cite{raeissadat2020platelet} \\
+Raeissadat 2020~\cite{raeissadat2020platelet} & Visual analog scale (VAS) Pain 12 month & Subjective \\
 \hline
-Tagalidou 2019 & Coping Humour Scale & Subjective & \cite{tagalidou2019efficacy} \\
+Tagalidou 2019~\cite{tagalidou2019efficacy} & Coping Humour Scale & Subjective \\
 \hline
-\textbf{Eskilsson 2017} & Burnout T2 & Subjective & \cite{eskilsson2017aerobic} \\
+\textbf{Eskilsson 2017}~\cite{eskilsson2017aerobic} & Burnout T2 & Subjective \\
 \hline
-Ahmadi 2018 & Craving Score Day 5 & Subjective & \cite{ahmadi2018single} \\
+Ahmadi 2018~\cite{ahmadi2018single} & Craving Score Day 5 & Subjective \\
 \hline
-\underline{Bai 2020} & GAD 7 at 3 months & Subjective & \cite{bai2020randomised} \\
+\underline{Bai 2020}~\cite{bai2020randomised} & Generalized Anxiety Disorder 7-item (GAD 7) at 3 months & Subjective \\
 \hline
-Bierre 2019 & BMD & Objective & \cite{bjerre2019community} \\
+Bierre 2019~\cite{bjerre2019community} & Bone Mineral Density (BMD) & Objective \\
 \hline
-\textbf{Thorndike 2014} & Mean steps per day & Objective & \cite{thorndike2014activity} \\
+\textbf{Thorndike 2014}~\cite{thorndike2014activity} & Mean steps per day & Objective \\
 \hline
-Liu 2018 & SPPB & Subjective & \cite{liu2018effect} \\
+Liu 2018~\cite{liu2018effect}  & Short Physical Performance Battery (SPPB) & Subjective \\
 \hline
-Rodrigo-Claverol 2019 & WOMAC Post & Subjective & \cite{rodrigo2019animal} \\
+Rodrigo-Claverol 2019~\cite{rodrigo2019animal} & WOMAC Post & Subjective \\
 \hline
-\textbf{Gleason 2015} & 3ms 48 months & Subjective & \cite{gleason2015effects} \\
+\textbf{Gleason 2015}~\cite{gleason2015effects} & Modified Mini-Mental State Examination (3ms) 48 months & Subjective \\
 \hline
-\underline{An 2020} & VO2peak at 6 months & Objective & \cite{an2020patterns} \\
+\underline{An 2020}~\cite{an2020patterns} & Peak oxygen uptake (VO2peak) at 6 months & Objective \\
 \hline
 \end{longtable}
 %
